# gitlab.com-hoppr-hoppr-cyclonedx-models

./: .coverage  .gitignore  .gitlab-ci.yml  .releaserc.yml  GENERATOR_INSTRUCTIONS.md  README.md  gitlab-ci.yml  model-gen.sh  package.json  pyproject.toml  renovate.json
ci/: semantic-release.yml
docs/: CHANGELOG.md
hoppr_cyclonedx_models/: __init__.py
hoppr_cyclonedx_models/cyclonedx_1_3/: __init__.py  spdx.py
hoppr_cyclonedx_models/cyclonedx_1_4/: __init__.py  spdx.py
tests/: test_hoppr_cyclonedx_models.py
