[tool.poetry]
name = "hoppr-cyclonedx-models"
version = "0.1.0"
description = ""
authors = ["Katy Dickenson <katherine.dickenson@lmco.com>"]

[tool.poetry.dependencies]
python = "^3.10"
datamodel-code-generator = "^0.13.0"
pydantic = "^1.9.1"
pylint = "^2.14.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
